@@ -2916,7 +2916,7 @@ function(dfile)
     if(any(ind <- !.is_ASCII(names(db))))
         out$fields_with_non_ASCII_tags <- names(db)[ind]
     ## For all fields used by the R package management system, values
-    ## must be ASCII we well (so that the RPM works in a C locale).
+    ## must be ASCII as well (so that the RPM works in a C locale).
     ASCII_fields <- c("Package", "Version", "Depends", "Suggests",
                       "Imports", "Priority", "Encoding")
     ASCII_fields <- intersect(ASCII_fields, names(db))
@@ -3181,24 +3181,24 @@ function(dir)
     paths <- paths[file_test("-f", paths)]
     if(!length(paths)) return(bad_flags)
     mfile <- paths[1]
+    make <- Sys.getenv("MAKE")
+    if(make == "") make <- "make"
 
     lines <-
         tryCatch(system(sprintf("%s -f %s -f %s",
-                                Sys.getenv("MAKE"),
+                                make,
                                 shQuote(mfile),
                                 shQuote(file.path(R.home("share"),
                                                   "make", "check.mk"))),
-                        intern = TRUE,
-                        if(identical(.Platform$OS.type, "unix"))
-                        ignore.stderr = TRUE),
+                        intern = TRUE, ignore.stderr = TRUE),
                  error = .identity)
     if(!length(lines) || inherits(lines, "error"))
         return(bad_flags)
 
     ## Try to be careful ...
-    lines <- lines[regexpr("^PKG_[A-Z]*FLAGS: ", lines) > -1]
+    lines <- lines[regexpr("^PKG_(CPP|C|CXX|F|FC|OBJC)FLAGS: ", lines) > -1L]
     names <- sub(":.*", "", lines)
-    lines <- sub("^PKG_[A-Z]*FLAGS: ", "", lines)
+    lines <- sub("^PKG_(CPP|C|CXX|F|FC|OBJC)FLAGS: ", "", lines)
     flags <- strsplit(lines, "[[:space:]]+")
     ## Bad flags:
     ##   -O*
@@ -3212,7 +3212,7 @@ function(dir)
     bad_flags_regexp <-
         sprintf("^-(%s)$",
                 paste(c("O.*",
-                        "Wall", "ansi", "pedantic", "traditiona",
+                        "Wall", "ansi", "pedantic", "traditional",
                         "f.*", "m.*", "std.*",
                         "x",
                         "q"),
@@ -3554,7 +3554,7 @@ print.check_package_datasets <- function(x, ...)
     code_dir <- file.path(dir, "R")
     if(file_test("-d", code_dir)) {
         all_files <- mydir(code_dir)
-        ## Under Windows, need a Makefile for methods.
+        ## Under Windows, need a Makefile.win for methods.
         R_files <- c("sysdata.rda", "Makefile.win",
                      list_files_with_type(code_dir, "code",
                                           full.names = FALSE,
@@ -3601,9 +3601,9 @@ print.check_package_datasets <- function(x, ...)
         vignettes <- c(vignettes,
                        list_files_with_exts(vign_dir, "pdf",
                                             full.names = FALSE))
-        ## Assume here this is run in the C locale, as it is by R CMD
-        ## check.
-        OK <- grep("^[[:alpha:]][[:alnum:]._-]+$", vignettes)
+        ## we specify ASCII filenames starting with a letter in R-exts
+        ## do this in a locale-independent way.
+        OK <- grep("^[ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz][ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789._-]+$", vignettes)
         wrong <- vignettes
         if(length(OK)) wrong <- wrong[-OK]
         if(length(wrong)) wrong_things$`inst/doc` <- wrong
